// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layouts TapePlayers snapshots contain data content when requesting result is not empty in dark mode 1`] = `
<div
  class="WhiteTapePlayers-root WhiteTapePlayers-root"
>
  <div
    class="WhiteTapePlayers-container WhiteTapePlayers-container"
  >
    <div
      class="WhiteTapePlayers-player WhiteTapePlayers-player"
      height="250"
      url="url1"
      width="250"
    >
      ReactPlayer
    </div>
    <div
      class="WhiteTapePlayers-info WhiteTapePlayers-info"
    >
      <div
        class="WhiteTapePlayers-number"
      >
        #
        1
      </div>
      <div
        class="WhiteTapePlayers-link WhiteTapePlayers-link"
      >
        url1
      </div>
      <div
        class="WhiteTapePlayers-title"
      >
        title1
      </div>
      <span
        class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium WhiteTapePlayers-slider WhiteTapePlayers-slider css-1scoeug-MuiSlider-root"
      >
        <span
          class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
        />
        <span
          class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
          style="left: 0%; width: 0%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-ypbqp9-MuiSlider-mark"
          data-index="0"
          style="left: 0%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="1"
          style="left: 1%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="2"
          style="left: 2%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="3"
          style="left: 3%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="4"
          style="left: 4%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="5"
          style="left: 5%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="6"
          style="left: 6%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="7"
          style="left: 7.000000000000001%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="8"
          style="left: 8%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="9"
          style="left: 9%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="10"
          style="left: 10%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="11"
          style="left: 11%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="12"
          style="left: 12%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="13"
          style="left: 13%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="14"
          style="left: 14.000000000000002%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="15"
          style="left: 15%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="16"
          style="left: 16%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="17"
          style="left: 17%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="18"
          style="left: 18%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="19"
          style="left: 19%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="20"
          style="left: 20%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="21"
          style="left: 21%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="22"
          style="left: 22%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="23"
          style="left: 23%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="24"
          style="left: 24%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="25"
          style="left: 25%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="26"
          style="left: 26%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="27"
          style="left: 27%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="28"
          style="left: 28.000000000000004%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="29"
          style="left: 28.999999999999996%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="30"
          style="left: 30%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="31"
          style="left: 31%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="32"
          style="left: 32%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="33"
          style="left: 33%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="34"
          style="left: 34%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="35"
          style="left: 35%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="36"
          style="left: 36%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="37"
          style="left: 37%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="38"
          style="left: 38%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="39"
          style="left: 39%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="40"
          style="left: 40%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="41"
          style="left: 41%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="42"
          style="left: 42%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="43"
          style="left: 43%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="44"
          style="left: 44%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="45"
          style="left: 45%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="46"
          style="left: 46%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="47"
          style="left: 47%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="48"
          style="left: 48%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="49"
          style="left: 49%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="50"
          style="left: 50%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="51"
          style="left: 51%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="52"
          style="left: 52%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="53"
          style="left: 53%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="54"
          style="left: 54%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="55"
          style="left: 55.00000000000001%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="56"
          style="left: 56.00000000000001%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="57"
          style="left: 57.00000000000001%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="58"
          style="left: 57.99999999999999%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="59"
          style="left: 59%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="60"
          style="left: 60%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="61"
          style="left: 61%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="62"
          style="left: 62%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="63"
          style="left: 63%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="64"
          style="left: 64%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="65"
          style="left: 65%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="66"
          style="left: 66%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="67"
          style="left: 67%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="68"
          style="left: 68%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="69"
          style="left: 69%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="70"
          style="left: 70%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="71"
          style="left: 71%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="72"
          style="left: 72%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="73"
          style="left: 73%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="74"
          style="left: 74%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="75"
          style="left: 75%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="76"
          style="left: 76%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="77"
          style="left: 77%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="78"
          style="left: 78%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="79"
          style="left: 79%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="80"
          style="left: 80%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="81"
          style="left: 81%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="82"
          style="left: 82%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="83"
          style="left: 83%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="84"
          style="left: 84%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="85"
          style="left: 85%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="86"
          style="left: 86%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="87"
          style="left: 87%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="88"
          style="left: 88%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="89"
          style="left: 89%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="90"
          style="left: 90%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="91"
          style="left: 91%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="92"
          style="left: 92%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="93"
          style="left: 93%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="94"
          style="left: 94%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="95"
          style="left: 95%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="96"
          style="left: 96%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="97"
          style="left: 97%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="98"
          style="left: 98%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="99"
          style="left: 99%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="100"
          style="left: 100%;"
        />
        <span
          class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-17owtq6-MuiSlider-thumb"
          data-index="0"
          style="left: 0%;"
        >
          <input
            aria-orientation="horizontal"
            aria-valuemax="1"
            aria-valuemin="0"
            aria-valuenow="0"
            data-index="0"
            max="1"
            min="0"
            step="0.01"
            style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
            type="range"
            value="0"
          />
        </span>
      </span>
    </div>
  </div>
  <ul
    class="MuiList-root MuiList-padding WhiteTapePlayers-list WhiteTapePlayers-list css-h4y409-MuiList-root"
  >
    <div
      class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters WhiteTapePlayers-itemActive css-1e7wz3j-MuiButtonBase-root-MuiListItemButton-root"
      role="button"
      tabindex="0"
    >
      <div>
        1
        . 
        title1
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
    <div
      class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters WhiteTapePlayers-itemInactive css-1e7wz3j-MuiButtonBase-root-MuiListItemButton-root"
      role="button"
      tabindex="0"
    >
      <div>
        2
        . 
        title2
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
  </ul>
  <div
    class="WhiteTapePlayers-controller WhiteTapePlayers-controller"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium WhiteTapePlayers-loop css-18qmpb9-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="RepeatIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 7h10v3l4-4-4-4v3H5v6h2V7zm10 10H7v-3l-4 4 4 4v-3h12v-6h-2v4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium WhiteTapePlayers-play WhiteTapePlayers-play css-18qmpb9-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="PlayCircleIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.5 16.5v-9l7 4.5-7 4.5z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <div
      class="WhiteTapePlayers-prevnext"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium css-18qmpb9-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="SkipPreviousIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 6h2v12H6zm3.5 6 8.5 6V6z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <div />
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium css-18qmpb9-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="SkipNextIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m6 18 8.5-6L6 6v12zM16 6v12h2V6h-2z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`layouts TapePlayers snapshots contain data content when requesting result is not empty in desktop 1`] = `
<div
  class="WhiteTapePlayers-root WhiteTapePlayers-root"
>
  <div
    class="WhiteTapePlayers-container WhiteTapePlayers-container"
  >
    <div
      class="WhiteTapePlayers-player WhiteTapePlayers-player"
      height="250"
      url="url1"
      width="250"
    >
      ReactPlayer
    </div>
    <div
      class="WhiteTapePlayers-info WhiteTapePlayers-info"
    >
      <div
        class="WhiteTapePlayers-number"
      >
        #
        1
      </div>
      <div
        class="WhiteTapePlayers-link WhiteTapePlayers-link"
      >
        url1
      </div>
      <div
        class="WhiteTapePlayers-title"
      >
        title1
      </div>
      <span
        class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium WhiteTapePlayers-slider WhiteTapePlayers-slider css-mgwu3u-MuiSlider-root"
      >
        <span
          class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
        />
        <span
          class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
          style="left: 0%; width: 0%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-1x4adq6-MuiSlider-mark"
          data-index="0"
          style="left: 0%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="1"
          style="left: 1%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="2"
          style="left: 2%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="3"
          style="left: 3%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="4"
          style="left: 4%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="5"
          style="left: 5%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="6"
          style="left: 6%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="7"
          style="left: 7.000000000000001%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="8"
          style="left: 8%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="9"
          style="left: 9%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="10"
          style="left: 10%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="11"
          style="left: 11%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="12"
          style="left: 12%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="13"
          style="left: 13%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="14"
          style="left: 14.000000000000002%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="15"
          style="left: 15%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="16"
          style="left: 16%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="17"
          style="left: 17%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="18"
          style="left: 18%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="19"
          style="left: 19%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="20"
          style="left: 20%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="21"
          style="left: 21%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="22"
          style="left: 22%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="23"
          style="left: 23%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="24"
          style="left: 24%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="25"
          style="left: 25%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="26"
          style="left: 26%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="27"
          style="left: 27%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="28"
          style="left: 28.000000000000004%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="29"
          style="left: 28.999999999999996%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="30"
          style="left: 30%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="31"
          style="left: 31%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="32"
          style="left: 32%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="33"
          style="left: 33%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="34"
          style="left: 34%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="35"
          style="left: 35%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="36"
          style="left: 36%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="37"
          style="left: 37%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="38"
          style="left: 38%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="39"
          style="left: 39%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="40"
          style="left: 40%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="41"
          style="left: 41%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="42"
          style="left: 42%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="43"
          style="left: 43%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="44"
          style="left: 44%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="45"
          style="left: 45%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="46"
          style="left: 46%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="47"
          style="left: 47%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="48"
          style="left: 48%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="49"
          style="left: 49%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="50"
          style="left: 50%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="51"
          style="left: 51%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="52"
          style="left: 52%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="53"
          style="left: 53%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="54"
          style="left: 54%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="55"
          style="left: 55.00000000000001%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="56"
          style="left: 56.00000000000001%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="57"
          style="left: 57.00000000000001%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="58"
          style="left: 57.99999999999999%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="59"
          style="left: 59%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="60"
          style="left: 60%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="61"
          style="left: 61%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="62"
          style="left: 62%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="63"
          style="left: 63%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="64"
          style="left: 64%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="65"
          style="left: 65%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="66"
          style="left: 66%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="67"
          style="left: 67%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="68"
          style="left: 68%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="69"
          style="left: 69%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="70"
          style="left: 70%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="71"
          style="left: 71%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="72"
          style="left: 72%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="73"
          style="left: 73%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="74"
          style="left: 74%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="75"
          style="left: 75%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="76"
          style="left: 76%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="77"
          style="left: 77%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="78"
          style="left: 78%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="79"
          style="left: 79%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="80"
          style="left: 80%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="81"
          style="left: 81%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="82"
          style="left: 82%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="83"
          style="left: 83%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="84"
          style="left: 84%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="85"
          style="left: 85%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="86"
          style="left: 86%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="87"
          style="left: 87%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="88"
          style="left: 88%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="89"
          style="left: 89%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="90"
          style="left: 90%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="91"
          style="left: 91%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="92"
          style="left: 92%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="93"
          style="left: 93%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="94"
          style="left: 94%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="95"
          style="left: 95%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="96"
          style="left: 96%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="97"
          style="left: 97%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="98"
          style="left: 98%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="99"
          style="left: 99%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="100"
          style="left: 100%;"
        />
        <span
          class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-14nty61-MuiSlider-thumb"
          data-index="0"
          style="left: 0%;"
        >
          <input
            aria-orientation="horizontal"
            aria-valuemax="1"
            aria-valuemin="0"
            aria-valuenow="0"
            data-index="0"
            max="1"
            min="0"
            step="0.01"
            style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
            type="range"
            value="0"
          />
        </span>
      </span>
    </div>
  </div>
  <ul
    class="MuiList-root MuiList-padding WhiteTapePlayers-list WhiteTapePlayers-list css-h4y409-MuiList-root"
  >
    <div
      class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters WhiteTapePlayers-itemActive css-1r8ijuk-MuiButtonBase-root-MuiListItemButton-root"
      role="button"
      tabindex="0"
    >
      <div>
        1
        . 
        title1
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
    <div
      class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters WhiteTapePlayers-itemInactive css-1r8ijuk-MuiButtonBase-root-MuiListItemButton-root"
      role="button"
      tabindex="0"
    >
      <div>
        2
        . 
        title2
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
  </ul>
  <div
    class="WhiteTapePlayers-controller WhiteTapePlayers-controller"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium WhiteTapePlayers-loop css-xbcopp-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="RepeatIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 7h10v3l4-4-4-4v3H5v6h2V7zm10 10H7v-3l-4 4 4 4v-3h12v-6h-2v4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium WhiteTapePlayers-play WhiteTapePlayers-play css-xbcopp-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="PlayCircleIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.5 16.5v-9l7 4.5-7 4.5z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <div
      class="WhiteTapePlayers-prevnext"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium css-xbcopp-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="SkipPreviousIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 6h2v12H6zm3.5 6 8.5 6V6z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <div />
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium css-xbcopp-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="SkipNextIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m6 18 8.5-6L6 6v12zM16 6v12h2V6h-2z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`layouts TapePlayers snapshots contain data content when requesting result is not empty in mobile 1`] = `
<div
  class="WhiteTapePlayers-root WhiteTapePlayers-root"
>
  <div
    class="WhiteTapePlayers-container WhiteTapePlayers-container"
  >
    <div
      class="WhiteTapePlayers-player WhiteTapePlayers-player"
      height="250"
      url="url1"
      width="100%"
    >
      ReactPlayer
    </div>
    <div
      class="WhiteTapePlayers-info WhiteTapePlayers-info"
    >
      <span
        class="MuiSlider-root MuiSlider-colorSecondary MuiSlider-sizeMedium WhiteTapePlayers-slider WhiteTapePlayers-slider css-mgwu3u-MuiSlider-root"
      >
        <span
          class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
        />
        <span
          class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
          style="left: 0%; width: 0%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-1x4adq6-MuiSlider-mark"
          data-index="0"
          style="left: 0%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="1"
          style="left: 1%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="2"
          style="left: 2%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="3"
          style="left: 3%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="4"
          style="left: 4%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="5"
          style="left: 5%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="6"
          style="left: 6%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="7"
          style="left: 7.000000000000001%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="8"
          style="left: 8%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="9"
          style="left: 9%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="10"
          style="left: 10%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="11"
          style="left: 11%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="12"
          style="left: 12%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="13"
          style="left: 13%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="14"
          style="left: 14.000000000000002%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="15"
          style="left: 15%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="16"
          style="left: 16%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="17"
          style="left: 17%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="18"
          style="left: 18%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="19"
          style="left: 19%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="20"
          style="left: 20%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="21"
          style="left: 21%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="22"
          style="left: 22%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="23"
          style="left: 23%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="24"
          style="left: 24%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="25"
          style="left: 25%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="26"
          style="left: 26%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="27"
          style="left: 27%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="28"
          style="left: 28.000000000000004%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="29"
          style="left: 28.999999999999996%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="30"
          style="left: 30%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="31"
          style="left: 31%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="32"
          style="left: 32%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="33"
          style="left: 33%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="34"
          style="left: 34%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="35"
          style="left: 35%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="36"
          style="left: 36%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="37"
          style="left: 37%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="38"
          style="left: 38%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="39"
          style="left: 39%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="40"
          style="left: 40%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="41"
          style="left: 41%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="42"
          style="left: 42%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="43"
          style="left: 43%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="44"
          style="left: 44%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="45"
          style="left: 45%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="46"
          style="left: 46%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="47"
          style="left: 47%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="48"
          style="left: 48%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="49"
          style="left: 49%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="50"
          style="left: 50%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="51"
          style="left: 51%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="52"
          style="left: 52%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="53"
          style="left: 53%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="54"
          style="left: 54%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="55"
          style="left: 55.00000000000001%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="56"
          style="left: 56.00000000000001%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="57"
          style="left: 57.00000000000001%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="58"
          style="left: 57.99999999999999%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="59"
          style="left: 59%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="60"
          style="left: 60%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="61"
          style="left: 61%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="62"
          style="left: 62%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="63"
          style="left: 63%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="64"
          style="left: 64%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="65"
          style="left: 65%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="66"
          style="left: 66%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="67"
          style="left: 67%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="68"
          style="left: 68%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="69"
          style="left: 69%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="70"
          style="left: 70%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="71"
          style="left: 71%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="72"
          style="left: 72%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="73"
          style="left: 73%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="74"
          style="left: 74%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="75"
          style="left: 75%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="76"
          style="left: 76%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="77"
          style="left: 77%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="78"
          style="left: 78%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="79"
          style="left: 79%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="80"
          style="left: 80%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="81"
          style="left: 81%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="82"
          style="left: 82%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="83"
          style="left: 83%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="84"
          style="left: 84%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="85"
          style="left: 85%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="86"
          style="left: 86%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="87"
          style="left: 87%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="88"
          style="left: 88%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="89"
          style="left: 89%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="90"
          style="left: 90%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="91"
          style="left: 91%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="92"
          style="left: 92%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="93"
          style="left: 93%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="94"
          style="left: 94%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="95"
          style="left: 95%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="96"
          style="left: 96%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="97"
          style="left: 97%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="98"
          style="left: 98%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="99"
          style="left: 99%;"
        />
        <span
          class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
          data-index="100"
          style="left: 100%;"
        />
        <span
          class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorSecondary css-14nty61-MuiSlider-thumb"
          data-index="0"
          style="left: 0%;"
        >
          <input
            aria-orientation="horizontal"
            aria-valuemax="1"
            aria-valuemin="0"
            aria-valuenow="0"
            data-index="0"
            max="1"
            min="0"
            step="0.01"
            style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
            type="range"
            value="0"
          />
        </span>
      </span>
    </div>
  </div>
  <ul
    class="MuiList-root MuiList-padding WhiteTapePlayers-list WhiteTapePlayers-list css-h4y409-MuiList-root"
  >
    <div
      class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters WhiteTapePlayers-itemActive css-1r8ijuk-MuiButtonBase-root-MuiListItemButton-root"
      role="button"
      tabindex="0"
    >
      <div>
        1
        . 
        title1
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
    <div
      class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters WhiteTapePlayers-itemInactive css-1r8ijuk-MuiButtonBase-root-MuiListItemButton-root"
      role="button"
      tabindex="0"
    >
      <div>
        2
        . 
        title2
      </div>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </div>
  </ul>
  <div
    class="WhiteTapePlayers-controller WhiteTapePlayers-controller"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium WhiteTapePlayers-loop css-xbcopp-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="RepeatIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 7h10v3l4-4-4-4v3H5v6h2V7zm10 10H7v-3l-4 4 4 4v-3h12v-6h-2v4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium WhiteTapePlayers-play WhiteTapePlayers-play css-xbcopp-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="PlayCircleIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.5 16.5v-9l7 4.5-7 4.5z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <div
      class="WhiteTapePlayers-prevnext"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium css-xbcopp-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="SkipPreviousIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 6h2v12H6zm3.5 6 8.5 6V6z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <div />
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-sizeMedium css-xbcopp-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="SkipNextIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m6 18 8.5-6L6 6v12zM16 6v12h2V6h-2z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
